# long_arithmetic

./: .gitignore  CMakeLists.txt  Makefile  README.md
arithmetic/: CMakeLists.txt  arithmetic.cpp  arithmetic.hpp  arithmetic_32.cpp  arithmetic_32.hpp  arithmetic_operators.cpp  arithmetic_operators_32.cpp
fft/: CMakeLists.txt  fft.cpp  fft.hpp
include/: CMakeLists.txt  arithmetic.hpp  arithmetic1.hpp  defines.cpp  defines.hpp  fft.hpp  test.cpp  test_system.hpp  testing.hpp
pi/: CMakeLists.txt  main.cpp  main_32.cpp
src/: arithmetic.cpp  arithmetic_operators.cpp  calculate_pi.cpp  fft.cpp  test.cpp
test/: CMakeLists.txt  test.cpp
